--- a/admin/meetings/060324-standup6.md
+++ b/admin/meetings/060324-standup6.md
@@ -16,16 +16,30 @@ Location: Zoom meeting
 - Aritra
 - Elijah
 
-## Missing
-- 
-
 ## Agenda
 - Checking up with progress and listing things that aren't done yet
 - Standup review
 - Retrospective
 
 ## Meeting Minutes
-- 
+- List of things that still need to be done:
+  - Saturday the 8th:
+      - UI animation
+      - Overall puppeteer testings
+      - Code quality (clean CSS and JS as suggested by the CI/CD)
+      - In file documentation
+      - Main workflow change
+      - Clean up CSS and JS in HTML
+  - Tuesday the 11th: 
+      - Video for the presentation
+- Review meeting, retrospective done
 
 ## Action Items
-- 
+- UI animation implementation: Rick
+- Puppeteer testing: Bernico
+- Clean up CSS and JS in HTML: Min
+- Main workflow change: Michael
+- Finish in file documentations: Everyone
+- Code quality: Everyone when pushing
+
+- Video: TBD
